# a-maze-ing

./: .flake8  .gitignore  DEV_A.md  DEV_B.md  Makefile  README.md  STUDYME.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  test_project.py
app/: __init__.py  errors.py  parser.py  renderer_ascii.py  renderer_curses.py  renderer_mlx.py  renderer_mlx_tk.py  writer.py
mazegen/: __init__.py  algorithms.py  build_backend.py  export.py  generator.py  maze.py  pathfinding.py  validate.py
tests/: test_project.py
