[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generation package for the 42 A-Maze-ing project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2,<3",
]
authors = [
  { name = "luispais" }, {name = "dbaltaza"},
]

[tool.setuptools]
packages = ["mazegen"]
